--- a/resources/views/emails/invoice.html
+++ b/resources/views/emails/invoice.html
@@ -8,6 +8,11 @@
     <title>Nova reserva na plataforma CR Rent</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style type="text/css">
+        .boxstatusorder {
+            width: 25%;
+            font-size: 14px;
+        }
+
         .boxstatusorder p {
             margin: 0;
             padding: 0;
@@ -17,8 +22,12 @@
             margin: 0 0 10px 0;
         }
 
-        .persdetail {
-            line-height: 1.6em;
+        .persdetail {}
+
+        .persdetail p {
+            margin: 0px;
+            font-size: 14px;
+            opacity: .8;
         }
 
         .persdetail h3 {
@@ -81,11 +90,11 @@
             color: #009900;
         }
 
-        .confirmed {
+        .confirmado {
             color: #009900;
         }
 
-        .standby {
+        .pendente {
             color: #ff0000;
         }
 
@@ -109,7 +118,6 @@
         @media screen and (max-width : 580px) {
             .boxstatusorder {
                 margin: 0;
-                flex-basis: 100%;
             }
 
             .boxstatusorder:last-child {
@@ -118,7 +126,6 @@
 
             .hirecar .hiredate {
                 margin: 5px 0 10px;
-                flex-basis: 100%;
             }
         }
     </style>
@@ -137,29 +144,30 @@
         <div class="container" style="font-family: 'Century Gothic', Tahoma, Arial;">
             <p class="Stile1" style="font-size: 18px; font-weight: bold;">CR Rent</p>
             <div class="statusorder"
-                style="display: flex; flex-wrap: wrap; border-top: 1px solid #ddd; border-bottom: 1px solid #ddd; margin-bottom: 15px;">
-                <div class="boxstatusorder" style="padding:10px; margin:0 5px 10px 0; flex: 1;">
+                style="display: flex; border-top: 1px solid #ddd; border-bottom: 1px solid #ddd; margin-bottom: 15px;">
+                <div class="boxstatusorder" style="width: 25%; padding:10px; box-sizing: border-box;">
                     <span class="vrc-email-summ-lbl"
                         style="display: block; font-weight: bold; margin-bottom: 2px; font-size: 1.1em;">
                         Order Number
                     </span>
                     <span class="vrc-email-summ-values">{{$reservation->id}}</span>
                 </div>
-                <div class="boxstatusorder" style="padding:10px; margin:0 5px 10px 0; flex: 1;">
+                <div class="boxstatusorder" style="width: 25%; padding:10px; box-sizing: border-box;">
                     <span class="vrc-email-summ-lbl"
                         style="display: block; font-weight: bold; margin-bottom: 2px; font-size: 1.1em;">
                         Confirmation Number
                     </span>
                     <span class="vrc-email-summ-values">{{$reservation->token}}</span>
                 </div>
-                <div class="boxstatusorder" style="padding:10px; margin:0 5px 10px 0; flex: 1;">
+                <div class="boxstatusorder" style="width: 25%; padding:10px; box-sizing: border-box;">
                     <span class="vrc-email-summ-lbl"
                         style="display: block; font-weight: bold; margin-bottom: 2px; font-size: 1.1em;">
                         Order Status
                     </span>
-                    <span style="font-weight: bold;" class="vrc-email-summ-values">{{$reservation->confirmed_at}}</span>
+                    <span style="font-weight: bold;" class="vrc-email-summ-values">{{$reservation->confirmed_at
+                        ? "Confirmado" : "Pendente"}}</span>
                 </div>
-                <div class="boxstatusorder" style="padding:10px; margin:0 5px 10px 0; flex: 1;">
+                <div class="boxstatusorder" style="width: 25%; padding:10px; box-sizing: border-box;">
                     <span class="vrc-email-summ-lbl"
                         style="display: block; font-weight: bold; margin-bottom: 2px; font-size: 1.1em;">
                         Order Date
@@ -171,7 +179,10 @@
                 <h3 style="font-size: 18px; font-weight: bold;">
                     Personal Details
                 </h3>
-                {{$reservation->client}}
+                <p>Name: {{$reservation->client->name}}</p>
+                <p>Email: {{$reservation->client->email}}</p>
+                <p>Phone: {{$reservation->client->phone}}</p>
+                <p>Identity card / passport: {{$reservation->client->cc}}</p>
             </div>
             <div class="hiremainbox">
                 <h4 style="font-size: 18px; font-weight: bold; margin-bottom: 12px;">
@@ -213,21 +224,39 @@
                     <p><span style="font-size: 18px; font-weight: bold;">
                             Order Details
                         </span></p>
-                    Refundable
-                    EUR 90.00
+
+                    @foreach ($reservation->extras as $extra)
+                    <div style="font-size: 14px; ">
+                        <span>{{$extra->name}}</span>
+                        <span style="float: right">{{$extra->price * ($extra->type === "day" ?
+                            $reservation->days : 1)}} EUR</span>
+                    </div>
+                    @endforeach
+                    <div style="font-size: 14px;">
+                        <span>Vehicle</span>
+                        <div style="float: right">{{$reservation->car_price}} EUR</div>
+                    </div>
+
+                    <div style="font-size: 14px;">
+                        <span>Insurance</span>
+                        <div style="float: right">{{$reservation->insurance->price}} EUR</div>
+                    </div>
+                    <div style="font-size: 14px;">
+                        <span>Pickup</span>
+                        <div style="float: right">{{$reservation->localizations[0]->price}} EUR</div>
+                    </div>
+                    <div style="font-size: 14px;">
+                        <span>Return</span>
+                        <div style="float: right">{{$reservation->localizations[1]->price}} EUR</div>
+                    </div>
+
                     <div class="hireordata hiretotal"
-                        style="margin:0 0 7px 0; margin: 10px 0 7px 0; color: #610d65; border-top: 1px solid #ddd; padding: 10px 0 0 0; font-size: 16px; font-weight: bold;">
+                        style="margin:0 0 7px 0; margin: 10px 0 7px 0; color: #144D5C; border-top: 1px solid #ddd; padding: 10px 0 0 0; font-size: 16px; font-weight: bold;">
                         <span>
                             Total
                         </span>
-                        <div style="float:right;"><strong>{{$reservation->price}}</strong></div>
+                        <div style="float:right;"><strong>{{$reservation->price}} EUR</strong></div>
                     </div>
-                </div>
-                <div class="vrc-emailc-footer smalltext" style="margin-top: 35px; font-size:12px;">
-                    <strong>
-                        To see your order details, visit the following page:
-                    </strong><br />
-                    https://vikwp.com/demo/vikrentcar/your-rental-order/?sid=1905742021&ts=1675017383
                 </div>
             </div>
         </div>
